Fix: fix bug 'iPhone image disproportionately stretched' (#129)
* fix: fix image styles for Safari

* fix: fix image sizes on mobile devices

* fix: fix image height

--- a/src/features/courses/main/main.scss
+++ b/src/features/courses/main/main.scss
@@ -63,5 +63,7 @@
     max-width: 314px;
     height: auto;
     margin-right: 22px;
+
+    object-fit: contain;
   }
 }
